--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <i class="fa-solid fa-wind"></i>
                 <div class="text">
                     <span></span>
-                    <p>Vento/p>
+                    <p>Vento</p>
                 </div>
             </div>
         </div>
